namespace CleanArchTemplate.Domain.Invitations;

public enum InvitationStatus
{
    Pending = 0,
    Accepted = 1,
    Revoked = 2,
}
